--- a/style.css
+++ b/style.css
@@ -21,4 +21,5 @@
   background: url('http://courses.ics.hawaii.edu/ics314f20/morea/ui-frameworks/murphys-front.jpg') no-repeat center center fixed;
   background-size: cover;
   height: 500px;
+  color: white;
 }
